--- a/build.gradle
+++ b/build.gradle
@@ -21,12 +21,16 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'mysql:mysql-connector-java:8.0.33'
+	implementation('org.springframework.boot:spring-boot-starter-web')
+	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+	implementation('mysql:mysql-connector-java:8.0.33')
+	//jsp
+	implementation('org.apache.tomcat.embed:tomcat-embed-jasper')
+	implementation('javax.servlet:jstl:1.2')
+	implementation('org.apache.tiles:tiles-jsp:3.0.8')
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	annotationProcessor 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok:1.14.8'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
