--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,11 @@ group = 'example.ex1'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '8'
 
+//오류: 기본 클래스 org.gradle.launcher.daemon.bootstrap.GradleDaemon을(를) 찾거나 로드할 수 없습니다.
+test {
+	maxHeapSize = "1024m"
+}
+
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
@@ -24,14 +29,13 @@ dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-web')
 	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
 	implementation('mysql:mysql-connector-java:8.0.33')
-	//jsp
 	implementation('org.apache.tomcat.embed:tomcat-embed-jasper')
 	implementation('javax.servlet:jstl:1.2')
 	implementation('org.apache.tiles:tiles-jsp:3.0.8')
-	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	annotationProcessor 'org.projectlombok:lombok:1.14.8'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	compileOnly 'org.projectlombok:lombok:1.18.26'
+	annotationProcessor 'org.projectlombok:lombok:1.18.26'
 }
 
 tasks.named('test') {
