소스트리 커밋

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,6 +17,7 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
+    #url: jdbc:mysql://localhost:3306/blog?serverTimezone=Asia/Seoul&useSSL=false&characterEncoding=UTF-8
     url: jdbc:mysql://localhost:3306/blog?serverTimezone=Asia/Seoul&useSSL=false&allowPublicKeyRetrieval=true&characterEncoding=UTF-8
     username: cos
     password: cos1234
